--- Auto-Git Commit ---

--- a/Architecture/x86/Learning/x86_64编程体系探索及编程/第3篇 调试和性能监控/第13章 断点调试/1. Single-Step单步调试模式.md
+++ b/Architecture/x86/Learning/x86_64编程体系探索及编程/第3篇 调试和性能监控/第13章 断点调试/1. Single-Step单步调试模式.md
@@ -6,8 +6,10 @@
 - [#DB handler里的Stack映像](#db-handler里的stack映像)
 - [Breakpoint调试模式](#breakpoint调试模式)
 - [Memory和I/O地址调试模式](#memory和io地址调试模式)
-- [DB异常可以是Fault或者Trap类型，下面两类条件引发的#DB异常属于Fault类型。](#db异常可以是fault或者trap类型下面两类条件引发的db异常属于fault类型)
-- [DB handler代码和实验13-1是相同的。](#db-handler代码和实验13-1是相同的)
+  - [处理器的支持](#处理器的支持)
+    - [DR4和DR5寄存器](#dr4和dr5寄存器)
+  - [断点寄存器DR0～DR3](#断点寄存器dr0~dr3)
+  - [状态寄存器DR6](#状态寄存器dr6)
 
 <!-- /code_chunk_output -->
 
@@ -56,30 +58,52 @@ breakpoint：￼
 
 上面这段代码在breakpoint位置上通过写入0xCC字节来构造一个BreakPoint调试环境。
 ￼
-
+![2019-12-27-09-03-00.png](./images/2019-12-27-09-03-00.png)
 
 在被调试的软件里对一个执行点下断点，debugger（调试软件）将目标位置改写为0CCh字节是最简单的设置断点的方式。如上所示，调试软件在改写前应保留断点的原字节，用来恢复原内容。
 
 # Memory和I/O地址调试模式
 
+## 处理器的支持
+
 处理器提供了三类Debug Register以支持调试功能。
+
 ① 断点寄存器：DR0、DR1、DR2及DR3。
+
 ② 状态寄存器：DR6。
+
 ③ 控制寄存器：DR7。
+
 这些debug寄存器的读/写使用MOV指令进行。
-￼ mov DR0，0x200000             ； 设置断点1
+
+```
+￼mov DR0，0x200000             ； 设置断点1
+```
+
 上面这条mov指令将0x200000值写入DR0，用来设置其中一个断点地址。debug寄存器属于特权级资源，需要在CPL=0权限下进行读/写。
-DR4和DR5寄存器
+
+### DR4和DR5寄存器
+
 这两个寄存器是保留的，当CR4.DE=1时，访问DR4和DR5将会产生#UD异常。当CR4.DE=0时，访问DR4和DR5寄存器的结果将是对DR6和DR7的访问。
-13.3.1 断点寄存器DR0～DR3
-4个断点寄存器DR0、DR1、DR2及DR3用来设置断点的线性地址。
+
+## 断点寄存器DR0～DR3
+
+4个断点寄存器DR0、DR1、DR2及DR3用来设置**断点的线性地址**。
 ￼
+![2019-12-27-09-05-37.png](./images/2019-12-27-09-05-37.png)
+
 在64位模式下，DR0～DR3寄存器是64位宽，保存64位的线性地址。
-13.3.2 状态寄存器DR6
+
+## 状态寄存器DR6
+
 状态寄存器有一个：DR6寄存器。
+
+![2019-12-27-09-11-29.png](./images/2019-12-27-09-11-29.png)
 ￼
 DR6寄存器反映最后一次发生#DB异常时的状态，这些状态位记录着最后一次由哪些条件引发#DB异常。只有当再一次发生#DB异常时，DR6寄存器的状态才会更新。
+
 B0～B3标志位
+
 B0～B3标志位被置位时，指示处理器在执行指令时遇到了DR0～DR3寄存器所设置的断点地址而引发#DB异常。例如：当B0被置位时，表示DR0寄存器内的断点被触发。
 BD标志位
 当DR7.GD=1时，对任何一个debug寄存器的访问（读或写）都会引发#DB异常。此时DR6.BD将会被置位，指示下一条指令是对debug寄存器的访问。
@@ -125,7 +149,7 @@ LEN0～LEN3（Length）控制位
 ④ 11B：double word（4个字节）。
 上面的（3），使用在IA-32e模式（long-mode）里，否则是未定义的设置。
 13.3.4 Fault与Trap类型的debug异常
-#DB异常可以是Fault或者Trap类型，下面两类条件引发的#DB异常属于Fault类型。
+\#DB异常可以是Fault或者Trap类型，下面两类条件引发的#DB异常属于Fault类型。
 ① DR7.GE=1时，对debug寄存器的访问引发#DB异常。
 ② 对断点指令的执行引发#DB异常。
 下面条件引发的#DB异常属于Trap类型。
@@ -174,7 +198,7 @@ Fault类型的debug异常在引发异常的指令执行之前产生，而Trap类
  ；① 对 DR7 进行设置￼       mov eax，dr7￼       bts eax，0                            ； L0=1，R/W0=0，LEN0=0￼       mov dr7，eax￼ ；② 设置断点位置￼       mov eax，breakpoint                 ； 断点位置在后续指令流里￼       mov dr0，eax                          ； DR0 保存断点￼       mov ebx，0x400000                    ； 写入值￼ ；③ 断点位置￼       breakpoint：￼       mov dr1，ebx                           ； 断点位置的指令执行写 DR1 寄存器￼ ；④ 从#DB handler返回后，再输出 debug寄存器￼       call println￼       call dump_drs
 上面代码中①里对DR7进行设置：L0=1，R/W0及LEN0都保持0值。这一步设置开启指令断点enable位。在②里将断点设为接下来要执行的指令，断点位置保存在DR0寄存器里。
 在breakpoint里的指令是对DR1寄存器进行设置，值为0x400000，最后在#DB handler返回后输出debug寄存器的标志位。
-#DB handler代码和实验13-1是相同的。
+\#DB handler代码和实验13-1是相同的。
 下面是在笔者的Core i5处理器笔记本式计算机上的测试结果。
 ￼
 在这个实验里，只有在真实机器上的结果才是正确的。这个结果显示：
