--- Auto-Git Commit ---

--- a/Architecture/x86/Learning/x86_64编程体系探索及编程/第3篇 调试和性能监控/第13章 断点调试/1. Single-Step单步调试模式.md
+++ b/Architecture/x86/Learning/x86_64编程体系探索及编程/第3篇 调试和性能监控/第13章 断点调试/1. Single-Step单步调试模式.md
@@ -1,18 +1,4 @@
 
-<!-- @import "[TOC]" {cmd="toc" depthFrom=1 depthTo=6 orderedList=false} -->
-
-<!-- code_chunk_output -->
-
-- [#DB handler里的Stack映像](#db-handler里的stack映像)
-- [Breakpoint调试模式](#breakpoint调试模式)
-- [Memory和I/O地址调试模式](#memory和io地址调试模式)
-  - [处理器的支持](#处理器的支持)
-    - [DR4和DR5寄存器](#dr4和dr5寄存器)
-  - [断点寄存器DR0～DR3](#断点寄存器dr0~dr3)
-  - [状态寄存器DR6](#状态寄存器dr6)
-
-<!-- /code_chunk_output -->
-
 单步调试使用**Eflags寄存器**里的**TF标志**和**RF标志位**，当Eflags.TF=1时，处理器进入Single\-step调试模式。
 
 关于single\-step另见5.3节描述。
@@ -31,7 +17,7 @@
       mov eax，5                ;test 5
 ```
 
-在上面的代码里，通过使用popf指令对eflags.TF进行置位，处理器在执行完`mov eax，1`指令后进入\#DB handler。
+在上面的代码里，通过使用**popf指令**对eflags.TF**进行置位**，处理器在执行完`mov eax，1`指令后进入\#DB handler。
 
 ![config](./images/1.png)
 
@@ -102,10 +88,12 @@ breakpoint：￼
 ￼
 DR6寄存器反映最后一次发生#DB异常时的状态，这些状态位记录着最后一次由哪些条件引发#DB异常。只有当再一次发生#DB异常时，DR6寄存器的状态才会更新。
 
-B0～B3标志位
+### B0～B3标志位
 
-B0～B3标志位被置位时，指示处理器在执行指令时遇到了DR0～DR3寄存器所设置的断点地址而引发#DB异常。例如：当B0被置位时，表示DR0寄存器内的断点被触发。
+B0～B3标志位被置位时，指示处理器在执行指令时遇到了DR0～DR3寄存器所设置的断点地址而引发\#DB异常。例如：当B0被置位时，表示DR0寄存器内的断点被触发。
+
 BD标志位
+
 当DR7.GD=1时，对任何一个debug寄存器的访问（读或写）都会引发#DB异常。此时DR6.BD将会被置位，指示下一条指令是对debug寄存器的访问。
 BS标志位
 当由Eflags.TF标志位置位而引发Single-Step调试时，DR6.BS将被置位，指示发生了single-step调试。
