--- Auto-Git Commit ---

--- a/Architecture/x86/Learning/x86_64编程体系探索及编程/第3篇 调试和性能监控/第13章 断点调试/1. Single-Step单步调试模式.md
+++ b/Architecture/x86/Learning/x86_64编程体系探索及编程/第3篇 调试和性能监控/第13章 断点调试/1. Single-Step单步调试模式.md
@@ -17,7 +17,7 @@
       mov eax，5                ;test 5
 ```
 
-在上面的代码里，通过使用**popf指令**对eflags.TF**进行置位**，处理器在执行完`mov eax，1`指令后进入\#DB handler。
+在上面的代码里，通过使用**popf指令**对`eflags.TF`**进行置位**，处理器在执行完`mov eax，1`指令后进入\#DB handler。
 
 ![config](./images/1.png)
 
@@ -25,15 +25,15 @@
 
 # #DB handler里的Stack映像
 
-在进入\#DB handler执行前，处理器将Eflags寄存器和下一条指令的地址压入\#DB handler的stack中，stack中的eflags寄存器TF标志为1。因此，当从\#DB handler里返回产生\#DB异常的下一条指令继续执行，后续会继续产生single\-step调试异常（\#DB），除非清TF标志位。
+在进入\#DB handler执行前，**处理器**将**Eflags寄存器**和**下一条指令的地址**压入\#DB handler的**stack**中，stack中的**eflags寄存器TF标志为1**。因此，当从\#DB handler里返回产生\#DB异常的下一条指令继续执行，后续会继续产生single\-step调试异常（\#DB），**除非清TF标志位**。
 
 仔细观察实验5-3里的输出结果可以发现single\-step调试里的执行流程。
 
 # Breakpoint调试模式
 
-当处理器在执行过程中遇到INT3指令时会产生#BP（BreakPoint，断点）异常，关于BreakPoint调试另见10.5.4.4.9节描述。
+当处理器在执行过程中遇到INT3指令时会产生\#BP（BreakPoint，断点）异常，关于BreakPoint调试另见10.5.4.4.9节描述。
 
-```
+```assembly
 ；； 断点调试的使用￼
       mov al，[breakpoint]                                ； 保存原字节￼
       mov BYTE [breakpoint]，0xcc                       ； 写入 int3 指令￼
@@ -86,18 +86,24 @@ breakpoint：￼
 
 ![2019-12-27-09-11-29.png](./images/2019-12-27-09-11-29.png)
 ￼
-DR6寄存器反映最后一次发生#DB异常时的状态，这些状态位记录着最后一次由哪些条件引发#DB异常。只有当再一次发生#DB异常时，DR6寄存器的状态才会更新。
+DR6寄存器反映**最后一次**发生\#DB异常时的状态，这些状态位记录着**最后一次**由**哪些条件**引发\#DB异常。
+
+只有当**再一次**发生\#**DB异常**时，DR6寄存器的状态才会更新。
 
 ### B0～B3标志位
 
-B0～B3标志位被置位时，指示处理器在执行指令时遇到了DR0～DR3寄存器所设置的断点地址而引发\#DB异常。例如：当B0被置位时，表示DR0寄存器内的断点被触发。
+B0～B3标志位**被置位**时，指示**处理器**在执行指令时遇到了DR0～DR3寄存器所设置的断点地址而引发\#DB异常。例如：当**B0被置位**时，表示**DR0寄存器**内的**断点**被触发。
 
-BD标志位
+### BD标志位
 
-当DR7.GD=1时，对任何一个debug寄存器的访问（读或写）都会引发#DB异常。此时DR6.BD将会被置位，指示下一条指令是对debug寄存器的访问。
-BS标志位
+当`DR7.GD=1`时，对任何一个debug寄存器的访问（读或写）都会引发#DB异常。此时DR6.BD将会被置位，指示下一条指令是对debug寄存器的访问。
+
+### BS标志位
+
 当由Eflags.TF标志位置位而引发Single-Step调试时，DR6.BS将被置位，指示发生了single-step调试。
-BT标志位
+
+@ BT标志位
+
 在使用TSS进行任务切换时，由TSS块内的T标志置位而引发Trap调试时，DR6.BT将被置位，指示在任务切换时发生了Trap（#DB异常）。
 多个debug条件同时触发
 在DR6寄存器记录的多个debug条件可能会遇到同时触发的情形，读取DR6寄存器内容可以得到多个标志位被置位。
