--- a/Architecture/x86/Learning/x86_64编程体系探索及编程/第1篇 x86基础/第1章 数与数据类型/1. 数.md
+++ b/Architecture/x86/Learning/x86_64编程体系探索及编程/第1篇 x86基础/第1章 数与数据类型/1. 数.md
@@ -25,22 +25,40 @@
 
 # 二进制数
 
-二进制数是**计算机运算的基础**，无论**何种制式的数**，在计算机中都是以**二进制形式存放**的。由二进制数字组成的数字序列是二进制数，如下所示。
+二进制数是**计算机运算的基础**，无论**何种制式的数**，在计算机中都是以**二进制形式存放**的。
+
+由**二进制数字**组成的**数字序列**是**二进制数**，如下所示。
+
+![2019-12-28-12-31-11.png](./images/2019-12-28-12-31-11.png)
 ￼
 二进制数组合里，每个数位被称为bit（位），能表达值0和1。二进制数的base值是2，那么在n个二进制数字的序列中，其值为
-值=（Dn-1×2n-1）+（Dn-2×2n-2）+…+（D1×21）+（D0×20）
-这是一个数学上的算式。这个值是我们很容易辨识的十进制值。
-1.1.3 二进制数的排列
-在日常的书写或表达上，最左边的位是最高位。数的位排列从左到右，对应的值从高到低。可是在机器的数字电路上，数的高低位可以从左到右进行排列，也可以从右到左进行排列。这样就产生了MSB和LSB的概念。
-什么是MSB？什么是LSB？
-以一个自然的二进制表达序列上32位的二进制数为例，最右边是bit 0，最左边是bit 31。那么bit 0就用LSB（Least Significant Bit，最低有效位）来表示，bit 31就用MSB（Most Significant Bit，最高有效位）来表示。
+
+![2019-12-28-12-32-22.png](./images/2019-12-28-12-32-22.png)
+
+这是一个数学上的算式。这个值是十进制值。
+
+# 二进制数的排列
+
+在**日常的书写或表达**上，**最左边**的位是**最高位**。数的位排列从左到右，对应的值从高到低。
+
+可是在**机器的数字电路**上，数的**高低位**可以**从左到右**进行排列，也可以**从右到左**进行排列。这样就产生了**MSB**和**LSB**的概念。
+
+## 什么是MSB？什么是LSB？
+
+以一个自然的二进制表达序列上**32位**的二进制数为例，**最右边**是`bit 0`，**最左边**是`bit 31`。那么`bit 0`就用**LSB（Least Significant Bit，最低有效位**）来表示，**bit 31**就用**MSB（Most Significant Bit，最高有效位**）来表示。
 ￼
 MSB也用做符号位（1为负，0为正），但若在无符号数上，则MSB就是数的最高位，LSB是数的最低位。无论一个数在机器上是从左到右排列，还是从右到左排列，使用MSB和LSB的概念都很容易对其二进制形式进行描述说明。
-小端序与大端序
-二进制数在计算机的组织存放中，地址由低位到高位对应着两种排列。
-① 由LSB到MSB，这就是小端序（little-endian）排法。
-② 由MSB到LSB，这就是大端序（big-endian）排法。
-在x86/x64体系中使用的是小端序存储格式，也就是：MSB对应着存储器地址的高位，LSB对应着存储器地址的低位。
+
+## 小端序与大端序
+
+**二进制数**在计算机的**组织存放**中，**地址**由**低位**到**高位**对应着两种排列。
+
+① **由LSB到MS**B，这就是**小端序**（little-endian）排法。
+
+② **由MSB到LSB**，这就是**大端序**（big-endian）排法。
+
+在**x86/x64**体系中使用的是**小端序存储格式**，也就是：MSB对应着存储器地址的高位，LSB对应着存储器地址的低位。
+
 在有些RISC（精简指令集计算机）体系里，典型的如Power/PowerPC系列，使用大端序排法。即在由低到高的地址位里，依次存放MSB到LSB。亦即：MSB存放在存储器地址的低位，LSB存放在高位。
 代码清单1-1：
 ￼ mov dword [Foo]，1￼ test byte [Foo]，1                                ； 测试 LSB 是否存放在低端上￼ jnz IS_little_endian                              ； 是小端序
