--- Auto-Git Commit ---

--- a/Architecture/x86/Learning/x86_64编程体系探索及编程/第1篇 x86基础/第1章 数与数据类型/1. 数.md
+++ b/Architecture/x86/Learning/x86_64编程体系探索及编程/第1篇 x86基础/第1章 数与数据类型/1. 数.md
@@ -57,14 +57,25 @@ MSB也用做符号位（1为负，0为正），但若在无符号数上，则MSB
 
 ② **由MSB到LSB**，这就是**大端序**（big-endian）排法。
 
-在**x86/x64**体系中使用的是**小端序存储格式**，也就是：MSB对应着存储器地址的高位，LSB对应着存储器地址的低位。
+在**x86/x64**体系中使用的是**小端序存储格式**，也就是：**MSB**对应着**存储器地址的高位**，**LSB**对应着**存储器地址的低位**。
 
 在有些RISC（精简指令集计算机）体系里，典型的如Power/PowerPC系列，使用大端序排法。即在由低到高的地址位里，依次存放MSB到LSB。亦即：MSB存放在存储器地址的低位，LSB存放在高位。
+
 代码清单1-1：
-￼ mov dword [Foo]，1￼ test byte [Foo]，1                                ； 测试 LSB 是否存放在低端上￼ jnz IS_little_endian                              ； 是小端序
-上面的代码将1存放在32位的内存里，通过读取内存的低字节来判断1到底存放在低字节还是高字节，从而区分是小端序还是大端序。
+
+```
+mov dword [Foo]，1
+test byte [Foo]，1                                ； 测试 LSB 是否存放在低端上
+jnz IS_little_endian                              ； 是小端序
+```
+
+上面的代码将**1**存放在**32位**的**内存**里，通过**读取内存的低字节**来判断1到底存放在**低字节**还是**高字节**，从而区分是小端序还是大端序。
+
 某些RISC机器上是可以在大端序与小端序存储序列之间做选择的。大端序格式看上去更符合人类表达习惯，而小端序看上去不那么直观，不过这对于计算机的处理逻辑并无影响。
-实验1-1：测试字节内的位排列
-字节内的位是否有大端序和小端序之分？这似乎没有定论，我们不是硬件设计人员，很难做出判断。笔者倾向于认为位的排列是区分的。
+
+>实验1-1：测试字节内的位排列
+
+**字节内的位**是否有**大端序**和**小端序之分**？这似乎没有定论，我们不是硬件设计人员，很难做出判断。笔者倾向于认为位的排列是区分的。
+
 从代码清单1-1我们可以测试机器是属于小端序还是大端序，原理是根据字节在内存中的存储序列进行判断。对代码稍做修改，即可用来测试位的排列，如代码清单1-2所示。
 代码清单1-2（topic01\ex1-1\boot.asm）：
