--- Auto-Git Commit ---

--- a/Architecture/x86/Learning/x86_64编程体系探索及编程/第1篇 x86基础/第1章 数与数据类型/1. 数.md
+++ b/Architecture/x86/Learning/x86_64编程体系探索及编程/第1篇 x86基础/第1章 数与数据类型/1. 数.md
@@ -47,13 +47,15 @@
 
 以一个自然的二进制表达序列上**32位**的二进制数为例，**最右边**是`bit 0`，**最左边**是`bit 31`。那么`bit 0`就用**LSB（Least Significant Bit，最低有效位**）来表示，**bit 31**就用**MSB（Most Significant Bit，最高有效位**）来表示。
 ￼
-MSB也用做符号位（1为负，0为正），但若在无符号数上，则MSB就是数的最高位，LSB是数的最低位。无论一个数在机器上是从左到右排列，还是从右到左排列，使用MSB和LSB的概念都很容易对其二进制形式进行描述说明。
+MSB也用做符号位（1为负，0为正），但若在**无符号数**上，则MSB就是**数的最高位**，LSB是数的最低位。
+
+无论一个数在机器上是从左到右排列，还是从右到左排列，使用MSB和LSB的概念都很容易对其二进制形式进行描述说明。
 
 ## 小端序与大端序
 
 **二进制数**在计算机的**组织存放**中，**地址**由**低位**到**高位**对应着两种排列。
 
-① **由LSB到MS**B，这就是**小端序**（little-endian）排法。
+① **由LSB到MSB**，这就是**小端序**（little-endian）排法。
 
 ② **由MSB到LSB**，这就是**大端序**（big-endian）排法。
 
@@ -78,4 +80,5 @@ jnz IS_little_endian                              ； 是小端序
 **字节内的位**是否有**大端序**和**小端序之分**？这似乎没有定论，我们不是硬件设计人员，很难做出判断。笔者倾向于认为位的排列是区分的。
 
 从代码清单1-1我们可以测试机器是属于小端序还是大端序，原理是根据字节在内存中的存储序列进行判断。对代码稍做修改，即可用来测试位的排列，如代码清单1-2所示。
+
 代码清单1-2（topic01\ex1-1\boot.asm）：
