--- Auto-Git Commit ---

--- a/Architecture/x86/Learning/x86_64编程体系探索及编程/第1篇 x86基础/第1章 数与数据类型/1. 数.md
+++ b/Architecture/x86/Learning/x86_64编程体系探索及编程/第1篇 x86基础/第1章 数与数据类型/1. 数.md
@@ -88,6 +88,6 @@ jnz IS_little_endian                              ； 是小端序
 
 **字节内的位**是否有**大端序**和**小端序之分**？这似乎没有定论，我们不是硬件设计人员，很难做出判断。笔者倾向于认为位的排列是区分的。
 
-从代码清单1-1我们可以测试机器是属于小端序还是大端序，原理是根据字节在内存中的存储序列进行判断。对代码稍做修改，即可用来测试位的排列，如代码清单1-2所示。
+从代码清单1-1我们可以测试机器是属于小端序还是大端序，原理是根据**字节**在**内存**中的**存储序列**进行判断。对代码稍做修改，即可用来测试位的排列，如代码清单1-2所示。
 
 代码清单1-2（topic01\ex1-1\boot.asm）：
