--- Auto-Git Commit ---

--- a/Architecture/x86/Learning/利用虚拟机(QEMU)学习x86指令集/1. .md
+++ b/Architecture/x86/Learning/利用虚拟机(QEMU)学习x86指令集/1. .md
@@ -55,12 +55,14 @@
 随便举个例子，来自kvm-unit-test:
 
 ```
-[root@lihaiwei kvm-unit-tests]# make
-gcc  -mno-red-zone -mno-sse -mno-sse2 -m64 -O1 -g -MMD -MF x86/.new-ut.d -Wall -Wwrite-strings -Wempty-body -Wuninitialized -Wignored-qualifiers -Werror  -fno-omit-frame-pointer    -Wno-frame-address   -fno-pic    -Wclobbered  -Wunused-but-set-parameter  -Wmissing-parameter-type  -Wold-style-declaration -Woverride-init -Wmissing-prototypes -Wstrict-prototypes -std=gnu99 -ffreestanding -I /root/kvm-unit-tests/lib -I /root/kvm-unit-tests/lib/x86 -I lib   -c -o x86/new-ut.o x86/new-ut.c
-gcc  -mno-red-zone -mno-sse -mno-sse2 -m64 -O1 -g -MMD -MF x86/.new-ut.d -Wall -Wwrite-strings -Wempty-body -Wuninitialized -Wignored-qualifiers -Werror  -fno-omit-frame-pointer    -Wno-frame-address   -fno-pic    -Wclobbered  -Wunused-but-set-parameter  -Wmissing-parameter-type  -Wold-style-declaration -Woverride-init -Wmissing-prototypes -Wstrict-prototypes -nostdlib -o x86/new-ut.elf -Wl,-T,/root/kvm-unit-tests/x86/flat.lds \
-	x86/new-ut.o x86/cstart64.o lib/libcflat.a /usr/lib/gcc/x86_64-redhat-linux/4.8.5/libgcc.a
+gcc  -mno-red-zone -mno-sse -mno-sse2 -m64 -O1 -g -MMD -MF x86/.new-ut.d -Wall -Wwrite-strings -Wclobbered -Wempty-body -Wuninitialized -Wignored-qualifiers -Wunused-but-set-parameter -Werror  -fno-omit-frame-pointer    -Wno-frame-address   -fno-pic   -Wmissing-parameter-type -Wold-style-declaration -Woverride-init -Wmissing-prototypes -Wstrict-prototypes -std=gnu99 -ffreestanding -I /root/kvm-unit-tests/lib -I /root/kvm-unit-tests/lib/x86 -I lib   -c -o x86/new-ut.o x86/new-ut.c
+
+gcc  -mno-red-zone -mno-sse -mno-sse2 -m64 -O1 -g -MMD -MF x86/.new-ut.d -Wall -Wwrite-strings -Wclobbered -Wempty-body -Wuninitialized -Wignored-qualifiers -Wunused-but-set-parameter -Werror  -fno-omit-frame-pointer    -Wno-frame-address   -fno-pic   -Wmissing-parameter-type -Wold-style-declaration -Woverride-init -Wmissing-prototypes -Wstrict-prototypes -nostdlib -o x86/new-ut.elf -Wl,-T,/root/kvm-unit-tests/x86/flat.lds x86/new-ut.o x86/cstart64.o lib/libcflat.a /usr/lib/gcc/x86_64-redhat-linux/4.8.5/libgcc.a
+
 objcopy -O elf32-i386 x86/new-ut.elf x86/new-ut.flat
 ```
+
+针对`x86/new-ut.c`文件要执行上面的命令, 必须先将
 
 ```
 # make
