--- Auto-Git Commit ---

--- a/Virtualization/Learning/处理器虚拟化技术/第1章 系统平台/1. 环境及工具.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第1章 系统平台/1. 环境及工具.md
@@ -25,3 +25,14 @@
 
 下面介绍如何使用VMware运行例子中的`demo.img`映像文件.
 
+运行VMware后, 使用典型配置新建一个虚拟机, 名为"demo". "客户机操作系统"选"其他", 版本为"其他64位". 虚拟机内存使用256MB足够.
+
+接下来设置处理器个数以及虚拟化引擎, 如图1-2.
+
+![2019-12-28-18-16-30.png](./images/2019-12-28-18-16-30.png)
+
+物理处理器数量为1, 处理器核心数量可以根据自己的平台, 这里选4.
+
+假如选择了2个核心数量, 运行demo.img的结果如图: 检测到的CPU个数为2.
+
+![2019-12-28-18-20-56.png](./images/2019-12-28-18-20-56.png)
