--- Auto-Git Commit ---

--- a/Architecture/x86/2.2 IA32和x64架构分页数据结构.md
+++ b/Architecture/x86/2.2 IA32和x64架构分页数据结构.md
@@ -16,20 +16,20 @@
     - [4KB页PDE生成PT的物理基地址](#4kb页pde生成pt的物理基地址)
     - [4KB页PTE生成页面的物理基地址](#4kb页pte生成页面的物理基地址)
     - [4MB页PDE生成页面的物理基地址](#4mb页pde生成页面的物理基地址)
-    - [1.4.5 最终物理地址的生成](#145-最终物理地址的生成)
-- [2 PAE分页](#2-pae分页)
-  - [2.1 4KB页面线性地址翻译](#21-4kb页面线性地址翻译)
-  - [2.2 2MB页面线性地址翻译](#22-2mb页面线性地址翻译)
-  - [2.3 CR3和分页结构项](#23-cr3和分页结构项)
-  - [2.4 物理地址组成](#24-物理地址组成)
-    - [2.4.1 CR3生成PDPT物理基地址](#241-cr3生成pdpt物理基地址)
-    - [2.4.2 PDPTE生成PDT的物理基地址](#242-pdpte生成pdt的物理基地址)
-    - [2.4.3 4KB页PDE生成PT的物理基地址](#243-4kb页pde生成pt的物理基地址)
-    - [2.4.4 4KB页PTE生成页面的物理基地址](#244-4kb页pte生成页面的物理基地址)
-    - [2.4.5 2MB页PDE生成页面的物理基地址](#245-2mb页pde生成页面的物理基地址)
-    - [2.4.6 最终物理地址的生成](#246-最终物理地址的生成)
-- [3 IA\-32e分页](#3-ia-32e分页)
-  - [3.1 4KB页面线性地址翻译](#31-4kb页面线性地址翻译)
+    - [最终物理地址的生成](#最终物理地址的生成)
+- [PAE分页](#pae分页)
+  - [4KB页面线性地址翻译](#4kb页面线性地址翻译-1)
+  - [2MB页面线性地址翻译](#2mb页面线性地址翻译)
+  - [CR3和分页结构项](#cr3和分页结构项-1)
+  - [物理地址组成](#物理地址组成-1)
+    - [CR3生成PDPT物理基地址](#cr3生成pdpt物理基地址)
+    - [PDPTE生成PDT的物理基地址](#pdpte生成pdt的物理基地址)
+    - [4KB页PDE生成PT的物理基地址](#4kb页pde生成pt的物理基地址-1)
+    - [4KB页PTE生成页面的物理基地址](#4kb页pte生成页面的物理基地址-1)
+    - [2MB页PDE生成页面的物理基地址](#2mb页pde生成页面的物理基地址)
+    - [最终物理地址的生成](#最终物理地址的生成-1)
+- [IA-32e分页](#ia-32e分页)
+  - [4KB页面线性地址翻译](#4kb页面线性地址翻译-2)
   - [3.2 2MB页面线性地址翻译](#32-2mb页面线性地址翻译)
   - [3.3 1GB页面线性地址翻译](#33-1gb页面线性地址翻译)
   - [3.4 CR3和分页结构项](#34-cr3和分页结构项)
@@ -193,25 +193,25 @@ CR3存放的是物理地址, 表项中也是物理地址.
 
 **4MB页面**的**PDE结构**提供**4MB页面的物理基地址**, 地址组成方式如下:
 
-① 当处理器**不支持PSE\-36**功能时，4M page frame只能映射到**32位的物理地址空间(！！！**)上，`PDE[31: 22]`是4M `page base\[31: 22\]`(**高10位**), 这时候**PDE[21：13]共9位是保留位**，必须设置为0值。
+① 当处理器**不支持PSE\-36**功能时，4M page frame只能映射到**32位的物理地址空间(！！！**)上，`PDE[31: 22]`是4M `page base[31: 22]`(**高10位**), 这时候`PDE[21：13]`共**9位是保留位**，必须设置为0值。
 
-② 当**MAXPHYADDR**值为**36**位时，PDE\[16：13\]是**4M page base[35：32]位(高4位**)，PDE\[31: 22\]是4M page base\[31: 22\](**中间10位**), 而PDE\[21：17\]是保留位，必须设置为0值。
+② 当**MAXPHYADDR**值为**36**位时，`PDE[16：13]`是`4M page base[35：32]`位(高4位)，`PDE[31: 22]`是`4M page base[31: 22]`(**中间10位**), 而`PDE[21：17]`是保留位，必须设置为0值。
 
-③ 当MAXPHYADDR值为**40位**时，PDE[20：13]是**4M page base\[39：32\]位(高8位**), PDE\[31: 22\]是4M page base\[31: 22\](**中间10位**)，而PDE[21]位是保留位，必须设置为0值。
+③ 当MAXPHYADDR值为**40位**时，`PDE[20：13]`是`4M page base[39：32]`位(高8位), `PDE[31: 22]`是`4M page base[31: 22]`(**中间10位**)，而`PDE[21]`位是保留位，必须设置为0值。
 
 ④ 当MAXPHYADDR值为**52位**时，也**仅能使用40位的物理地址(！！！**)，同③。
 
 因此，4M page frame的基地址形成除上述所说外，**36位或40位的物理地址低22位将补0(！！！**)，物理页面将在**4M边界上对齐(！！！**)。
 
-### 1.4.5 最终物理地址的生成
+### 最终物理地址的生成
 
 上面可以看到, 所有页面基地址都是4KB或4MB边界对齐的, 再加上线性地址低位的偏移offset, 生成最终的物理地址.
 
-# 2 PAE分页
+# PAE分页
 
 **线性地址32位宽**, 使用两级或三级页转换表, 每个表项8字节宽, 新CR3仍然32位宽, 但只使用了27位, 拼凑了32位PDPT物理地址。
 
-## 2.1 4KB页面线性地址翻译
+## 4KB页面线性地址翻译
 
 使用PDPT（page directory pointer table，页目录指针表），PDT和PT。
 
@@ -223,7 +223,7 @@ CR3存放的是物理地址, 表项中也是物理地址.
 
 **PDPT大小可以是4x8=32字节**, PDT和PT仍然是4KB大小, 512x8.
 
-## 2.2 2MB页面线性地址翻译
+## 2MB页面线性地址翻译
 
 使用PDPT和PDT。
 
@@ -235,77 +235,77 @@ CR3存放的是物理地址, 表项中也是物理地址.
 
 **PDPT大小可以是4x8=32字节**, PDT是4KB
 
-## 2.3 CR3和分页结构项
+## CR3和分页结构项
 
 ![config](./images/6.jpg)
 
-## 2.4 物理地址组成
+## 物理地址组成
 
 PAE下, **线性地址仍然32位宽(！！！**), **CR3还是32位宽**,  支持**最高52位的物理地址**，依赖于**MAXPHYADDR值**。当MAXPHYADDR为**36**时只能映射到**36位的物理地址**，以此类推。
 
-### 2.4.1 CR3生成PDPT物理基地址
+### CR3生成PDPT物理基地址
 
 **CR3低5位被忽略**，提供**27位的PDPT基地址**.
 
 **32位的PDPT物理地址**形成如下:
 
-① base of PDPT[31：5]=CR3[31：5]，**高27位由CR3**提供。
+① `base of PDPT[31：5]`=`CR3[31：5]`，**高27位由CR3**提供。
 
-② base of PDPT[4：0]=0值，**低5位补0**。
+② `base of PDPT[4：0]`=`0`值，**低5位补0**。
 
 如果是**36位或更大物理地址**, 则进行**高位补0**.
 
 因此，PDPT的基地址是**32字节边界对齐(2\^5！！！**)的。
 
-### 2.4.2 PDPTE生成PDT的物理基地址
+### PDPTE生成PDT的物理基地址
 
 4KB页和2MB页这是一致的
 
 在**PDT（page directory table）物理基地址**上，它的地址为**52位（最高支持**）、**40位或是36位**，它的形成如下。
 
-① 当MAXPHYADDR为**52位**时，base of PDT\[51：12\]=PDPTE\[51：12\]，由PDPTE结构的\[51：12\]提供PDT的**高40位**。
+① 当MAXPHYADDR为**52位**时，`base of PDT[51：12]`=`PDPTE[51：12]`，由PDPTE结构的`[51：12]`提供PDT的**高40位**。
 
-② 当MAXPHYADDR为**40位**时，base of PDT\[39：12\]=PDPTE\[39：12\]，由PDPTE结构的\[39：12\]提供**PDT的高28位**。此时PDPTE[51：40]是保留位，必须为0值。
+② 当MAXPHYADDR为**40位**时，`base of PDT[39：12]`=`PDPTE[39：12]`，由PDPTE结构的`[39：12]`提供**PDT的高28位**。此时`PDPTE[51：40]`是保留位，必须为0值。
 
-③ 当MAXPHYADDR为**36位**时，base of PDT[35：12]=PDPTE[35：12]，由PDPTE结构的[35：12]提供PDT的**高24位**。此时PDPTE[51：36]是保留位，必须为0值。
+③ 当MAXPHYADDR为**36位**时，`base of PDT[35：12]`=`PDPTE[35：12]`，由PDPTE结构的`[35：12]`提供PDT的**高24位**。此时`PDPTE[51：36]`是保留位，必须为0值。
 
 **PDT的低12位(！！！)将补0值**，因此**PDT物理基地址**将在**4K边界上对齐(！！！**)。
 
-### 2.4.3 4KB页PDE生成PT的物理基地址
+### 4KB页PDE生成PT的物理基地址
 
-PDE\[51：12\](**最多30位, 加上12位0, 最大52位物理地址**)提供**PT的物理基地址高位**， **低12位全部补0**, PT地址为**4K边界对齐**。
-
-如果物理地址比较小, **bit 51往下减少**.
-
-### 2.4.4 4KB页PTE生成页面的物理基地址
-
-PTE\[51：12\]提供**4K页面的高物理地址位(最多40位**),  **低12位全部补0**,  **页面地址4K边界对齐**.
+`PDE[51：12]`(**最多30位, 加上12位0, 最大52位物理地址**)提供**PT的物理基地址高位**， **低12位全部补0**, PT地址为**4K边界对齐**。
 
 如果物理地址比较小, **bit 51往下减少**.
 
-### 2.4.5 2MB页PDE生成页面的物理基地址
+### 4KB页PTE生成页面的物理基地址
+
+`PTE[51：12]`提供**4K页面的高物理地址位(最多40位**),  **低12位全部补0**,  **页面地址4K边界对齐**.
+
+如果物理地址比较小, **bit 51往下减少**.
+
+### 2MB页PDE生成页面的物理基地址
 
 2MB页面**没有PT**, **PDE直接指向页面**.
 
-① MAXPHYADDR为**52位**时，2M page frame地址的\[51：21\](**高31位**)由PDE[51：21]提供。
+① MAXPHYADDR为**52位**时，`2M page frame`地址的`[51：21]`(**高31位**)由`PDE[51：21]`提供。
 
-② MAXPHYADDR为**40位**时，2M page frame地址的\[39：21\](**高19位**)由PDE[39：21]提供，此时PDE[51：22]为保留位，必须为0。
+② MAXPHYADDR为**40位**时，`2M page frame`地址的`[39：21]`(**高19位**)由`PDE[39：21]`提供，此时`PDE[51：22]`为保留位，必须为0。
 
-③ MAXPHYADDR为**36位**时，2M page frame地址的\[35：21\](**高15位**)由PDE[35：21]提供，此时PDE[51：36]为保留位，必须为0
+③ MAXPHYADDR为**36位**时，`2M page frame`地址的`[35：21]`(**高15位**)由`PDE[35：21]`提供，此时`PDE[51：36]`为保留位，必须为0
 
-2M page frame地址的\[20：0\](**低21位！！！)补0**，因此**2M页面**的地址**在2M边界上对齐**。
+`2M page frame`地址的`[20：0]`(**低21位！！！)补0**，因此**2M页面**的地址**在2M边界上对齐**。
 
-### 2.4.6 最终物理地址的生成
+### 最终物理地址的生成
 
 上面可以看到, 所有页面基地址都是4KB或2MB边界对齐的, 再加上线性地址低位的偏移offset, 生成最终的物理地址.
 
-# 3 IA\-32e分页
+# IA-32e分页
 
 线性地址48位宽, 使用两级到四级的页转换表, 每个表项都是8字节宽, CR3是64位宽, 针对是否支持PCIDE功能, CR3使用不一样。
 
-## 3.1 4KB页面线性地址翻译
+## 4KB页面线性地址翻译
 
-使用PML4T（page map level-4 table，四层映射表），PDPT，PDT和PT。
+使用`PML4T`（page map level-4 table，四层映射表），`PDPT`，`PDT`和`PT`。
 
 用IA\-32e分页的到一个4KB页面的线性地址翻译
 
