--- a/Virtualization/Learning/处理器虚拟化技术/第1章 系统平台/6. 系统机制.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第1章 系统平台/6. 系统机制.md
@@ -3,4 +3,18 @@
 
 系统运行在stage2阶段使用PAE分页模式, 运行在stage3阶段使用IA\-32e分页模式. 
 
-PAE分页模式的页表结构很大程度参考了Window
+PAE分页模式的页表结构很大程度参考了Windows NT的设计.
+
+而IA\-32e分页模式在映射时PDT与PT表采用了动态分配的策略.
+
+## PAE分页模式实现
+
+PAE分页模式下存在PDPT、PDT和PT三级也表结构, 在 `inc/page.inc`文件中定义了PAE分页模式下的三个页表结构地址值:
+
+- `PT_BASE` 与 `PT_TOP`, **值**分别为 `C0000000H` 与 `C07FFFFFH`, 这个PT区域共8MB, 是**整个PAE分页模式**下的**页表结构区域**.
+- `PT_PHYSICAL_BASE` 与 `PT_PHYSICAL_TOP`, 值分别为 `200000H 与 9FFFFFH, 定义PT区域的物理地址.
+- PDT_BASE 与 PDT_TOP, 值分别为 C0600000H 与 C0603FFFH, 共16KB. PDT区域内嵌在PT区域内.
+- PDT_PHYSICAL_BASE 与 PDT_PHYSICAL_TOP, 值分别为 800000H 与 803FFFH, 定义PDT区域的物理地址.
+
+在Windows NT设计中, PDPT_BASE 与 PDPT_TOP 值分别为 C0603000H 与 C060301FH, 也嵌在PDT区域内. 但我们这里, 将这个 32字节(4 x 8字节)的PDPT区域移到了SDA.Ppt区域内, 并没有使用内嵌的PDPT区域.
+
