--- Auto-Git Commit ---

--- a/Virtualization/Learning/处理器虚拟化技术/第1章 系统平台/6. 系统机制.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第1章 系统平台/6. 系统机制.md
@@ -15,10 +15,10 @@ PAE分页模式下存在`PDPT`、`PDT`和`PT`三级页表结构, 在 `inc/page.i
 
 - `PT_BASE` 与 `PT_TOP`, **值**分别为 `C0000000H` 与 `C07FFFFFH`, 这个PT区域共**8MB**, 是**整个PAE分页模式**下的**页表结构区域**, 这里是**虚拟地址**区域.
 - `PT_PHYSICAL_BASE` 与 `PT_PHYSICAL_TOP`, 值分别为 `200000H` 与 `9FFFFFH`, 定义PT区域的**物理地址**.
-- `PDT_BASE` 与 `PDT_TOP`, 值分别为 `C0600000H` 与 `C0603FFFH`, 共**16KB**. PDT区域**内嵌在PT区域内**.
+- `PDT_BASE` 与 `PDT_TOP`, 值分别为 `C0600000H` 与 `C0603FFFH`, 共**16KB**. PDT区域**内嵌在PT区域内**, 这里是**虚拟地址**区域.
 - `PDT_PHYSICAL_BASE` 与 `PDT_PHYSICAL_TOP`, 值分别为 `800000H` 与 `803FFFH`, 定义PDT区域的**物理地址**.
 
-在Windows NT设计中, `PDPT_BASE` 与 `PDPT_TOP` 值分别为 `C0603000H` 与 `C060301FH`, 也嵌在PDT区域内. 但我们这里, 将这个 32字节(4 x 8字节)的PDPT区域移到了SDA.Ppt区域内, 并没有使用内嵌的PDPT区域.
+在Windows NT设计中, `PDPT_BASE` 与 `PDPT_TOP` 值分别为 `C0603000H` 与 `C060301FH`, 也嵌在PDT区域内. 但我们这里, 将这个 **32字节(4 x 8字节**)的PDPT区域移到了SDA.Ppt区域内, 并没有使用内嵌的PDPT区域.
 
 SDA.Ppt存放在4个PDPTE表项, 在初始化时分别指向4个PDT区域, 如图1-7.
 
