--- a/Virtualization/Learning/处理器虚拟化技术/第1章 系统平台/6. 系统机制.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第1章 系统平台/6. 系统机制.md
@@ -1,11 +1,13 @@
 
 # 分页机制
 
+可以参考: `Architecture/x86/IA32和x64架构分页数据结构`
+
 系统运行在stage2阶段使用PAE分页模式, 运行在stage3阶段使用IA\-32e分页模式. 
 
 PAE分页模式的页表结构很大程度参考了Windows NT的设计.
 
-而IA\-32e分页模式在映射时PDT与PT表采用了动态分配的策略.
+而**IA\-32e分页模式**在映射时**PDT**与**PT表**采用了**动态分配**的策略.
 
 ## PAE分页模式实现
 
@@ -20,7 +22,20 @@ PAE分页模式下存在`PDPT`、`PDT`和`PT`三级页表结构, 在 `inc/page.i
 
 在Windows NT设计中, `PDPT_BASE` 与 `PDPT_TOP` 值分别为 `C0603000H` 与 `C060301FH`, 也嵌在PDT区域内. 但我们这里, 将这个 **32字节(4 x 8字节**)的PDPT区域移到了SDA.Ppt区域内, 并没有使用内嵌的PDPT区域.
 
+注: 这个8MB、16KB和32字节, 可参照`Architecture/x86/IA32和x64架构分页数据结构 3.1 4Kb页面线性地址翻译`
+
 SDA.Ppt存放在4个PDPTE表项, 在初始化时分别指向4个PDT区域, 如图1-7.
 
 ![2019-12-30-10-56-23.png](./images/2019-12-30-10-56-23.png)
 
+**整个PT区域**的**物理地址**区域是从 `200000H` 到 `9FFFFFH`(共8MB), 对应**虚拟地址** `C0000000H` 到 `C07FFFFFFH`.
+
+### 初始化页表结构
+
+在 `pre-stage2` 阶段(protected模块头部, 参见 1.5.3 节代码片段 1-41)调用`init_ppt_area`函数初始化PDPT区域.
+
+```assembly
+
+```
+
+`init_ppt_area`函数
