--- Auto-Git Commit ---

--- a/Virtualization/Learning/处理器虚拟化技术/第1章 系统平台/6. 系统机制.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第1章 系统平台/6. 系统机制.md
@@ -50,4 +50,12 @@ SDA.Ppt存放在**4个PDPTE表项**, 在初始化时分别指向**4个PDT区域*
 
 注: 这里写入的是物理地址, 一个PDPTE占用空间是8字节(所以加8), 一个PDT占用空间是4KB(2\^12, 所以值每次加 1000H)
 
-在 `pre-stage2` 阶段也调用了`init_pae_page`函数建立基本的页映射关系(参见`1.5.3`节代码片段`1-42`). `init_pae_page`函数内部调用`map_pae_
+在 `pre-stage2` 阶段也调用了`init_pae_page`函数建立基本的页映射关系(参见`1.5.3`节代码片段`1-42`). `init_pae_page`函数内部调用`map_pae_page_transition_table`函数初始化页表结构区域, 并建立`PT_BASE`到`PT_TOP`区域(`C0000000H`到`C07FFFFFH`)的映射关系.
+
+```assembly
+
+```
+
+### 实现虚拟地址映射
+
+do
