--- a/Virtualization/Learning/处理器虚拟化技术/第1章 系统平台/6. 系统机制.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第1章 系统平台/6. 系统机制.md
@@ -60,4 +60,7 @@ SDA.Ppt存放在**4个PDPTE表项**, 在初始化时分别指向**4个PDT区域*
 
 `do_virtual_address_mapping32`函数(被重定义为`do_virtual_address_mapping`)是虚拟地址映射到物理地址的实现函数, 在`lib/page32.asm`文件里实现.
 
+```assembly
+
 ```
+
