--- Auto-Git Commit ---

--- a/Virtualization/Learning/处理器虚拟化技术/第1章 系统平台/6. 系统机制.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第1章 系统平台/6. 系统机制.md
@@ -64,3 +64,9 @@ SDA.Ppt存放在**4个PDPTE表项**, 在初始化时分别指向**4个PDT区域*
 
 ```
 
+在虚拟地址映射时使用页表walk方式. PDPT已经设置好, 只需从PDT开始walk到PT. 当检查到表项属于not\-present时写入相应的表项处理.
+
+## IA-32e分页模式实现
+
+在IA-32e分页模式下, PML4T与PDPT区域拥有固定区域, PDT与PT表需要从PT pool里动态分配. `inc/page.inc`头文件里定义了下面的值.
+
