--- Auto-Git Commit ---

--- a/Virtualization/Learning/处理器虚拟化技术/第1章 系统平台/6. 系统机制.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第1章 系统平台/6. 系统机制.md
@@ -70,3 +70,9 @@ SDA.Ppt存放在**4个PDPTE表项**, 在初始化时分别指向**4个PDT区域*
 
 在IA-32e分页模式下, PML4T与PDPT区域拥有固定区域, PDT与PT表需要从PT pool里动态分配. `inc/page.inc`头文件里定义了下面的值.
 
+- `PPT_BASE64` 与 `PPT_TOP64`, 值分别为 `FFFFF6FB_7DA00000H` 与 `FFFFF6FB_7DBFFFFFFH`, 定义PDPT区域, 共**2MB大小**.
+- `PPT_PHYSICAL_BASE64` 与 `PPT_PHYSICAL_TOP64`, 值分别为 `2000000H` 与 `21FFFFFH`, 定义PDPT区域的**物理地址**.
+- `PXT_BASE64` 与 `PXT_TOP64`, 值分别是 `FFFFF6FB_7DBED000H 与 FFFFF6FB_7DBEDFFFH, 定义PML4T区域, 共**4KB大小**.
+- PXT_PHYSICAL_BASE64 与 PXT_PHYSICAL_TOP64, 值分别为21ED000H 与 21EDFFFH, 定义PML4T区域物理地址.
+
+注: 这个8MB、16KB和32字节, 可参照`Architecture/x86/IA32和x64架构分页数据结构 3.1 4Kb页面线性地址翻译`
