--- Auto-Git Commit ---

--- a/Virtualization/Learning/处理器虚拟化技术/第1章 系统平台/6. 系统机制.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第1章 系统平台/6. 系统机制.md
@@ -1,5 +1,5 @@
 
-# 分页机制
+# 1. 分页机制
 
 可以参考: `Architecture/x86/IA32和x64架构分页数据结构`
 
@@ -9,7 +9,7 @@ PAE分页模式的页表结构很大程度参考了Windows NT的设计.
 
 而**IA\-32e分页模式**在映射时**PDT**与**PT表**采用了**动态分配**的策略.
 
-## PAE分页模式实现
+## 1.1. PAE分页模式实现
 
 2 + 9 + 9 + 12
 
@@ -30,7 +30,7 @@ SDA.Ppt存放在**4个PDPTE表项**, 在初始化时分别指向**4个PDT区域*
 
 **整个PT区域**的**物理地址**区域是从 `200000H` 到 `9FFFFFH`(共8MB), 对应**虚拟地址** `C0000000H` 到 `C07FFFFFFH`.
 
-### 初始化页表结构
+### 1.1.1. 初始化页表结构
 
 在 `pre-stage2` 阶段(protected模块头部, 参见 1.5.3 节代码片段 1-41)调用`init_ppt_area`函数初始化PDPT区域.
 
@@ -56,7 +56,7 @@ SDA.Ppt存放在**4个PDPTE表项**, 在初始化时分别指向**4个PDT区域*
 
 ```
 
-### 实现虚拟地址映射
+### 1.1.2. 实现虚拟地址映射
 
 `do_virtual_address_mapping32`函数(被重定义为`do_virtual_address_mapping`)是虚拟地址映射到物理地址的实现函数, 在`lib/page32.asm`文件里实现.
 
@@ -66,7 +66,7 @@ SDA.Ppt存放在**4个PDPTE表项**, 在初始化时分别指向**4个PDT区域*
 
 在虚拟地址映射时使用页表walk方式. PDPT已经设置好, 只需从PDT开始walk到PT. 当检查到表项属于not\-present时写入相应的表项处理.
 
-## IA-32e分页模式实现
+## 1.2. IA-32e分页模式实现
 
 在IA-32e分页模式下, PML4T与PDPT区域拥有固定区域, PDT与PT表需要从PT pool里动态分配. `inc/page.inc`头文件里定义了下面的值.
 
@@ -77,4 +77,15 @@ SDA.Ppt存放在**4个PDPTE表项**, 在初始化时分别指向**4个PDT区域*
 
 注: 这个2MB和4KB, 可参照`Architecture/x86/IA32和x64架构分页数据结构 4.1 4Kb页面线性地址翻译`
 
-PDT与PT在PT pool(或备用PT pool, 参见表1-6)
+PDT与PT在PT pool(或备用PT pool, 参见表1-6)里分配, 如图1-8.
+
+![2019-12-30-14-15-20.png](./images/2019-12-30-14-15-20.png)
+
+4K大小的PML4T区域嵌入在PDPT区域内, 其中部分PML4TE与PDPTE重叠在一起.
+
+### 1.2.1. 初始化页表结构
+
+### 1.2.2. 实现虚拟地址映射
+
+# 多处理器机制
+
