--- Auto-Git Commit ---

--- a/Virtualization/Learning/处理器虚拟化技术/第1章 系统平台/6. 系统机制.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第1章 系统平台/6. 系统机制.md
@@ -87,5 +87,11 @@ PDT与PT在PT pool(或备用PT pool, 参见表1-6)里分配, 如图1-8.
 
 ### 1.2.2. 实现虚拟地址映射
 
-# 多处理器机制
+# 2. 多处理器机制
+
+1.5中所述的系统启动完毕后, 多处理器环境被开启, BSP处于工作状态, 而所有APs处于HLT状态, 等待BSP分派任务执行.
+
+## 调度任务
+
+所有处理器都可以通过IPI(Inter-processor interrupt, 处理器间中断)消息形式调度目标处理器执行某个任务, 也可以广播IPI给一组处理器共同执行某个程序.
 
