--- Auto-Git Commit ---

--- a/Virtualization/Learning/处理器虚拟化技术/第1章 系统平台/6. 系统机制.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第1章 系统平台/6. 系统机制.md
@@ -1,4 +1,23 @@
 
+<!-- @import "[TOC]" {cmd="toc" depthFrom=1 depthTo=6 orderedList=false} -->
+
+<!-- code_chunk_output -->
+
+- [1. 分页机制](#1-分页机制)
+  - [1.1. PAE分页模式实现](#11-pae分页模式实现)
+    - [1.1.1. 初始化页表结构](#111-初始化页表结构)
+    - [1.1.2. 实现虚拟地址映射](#112-实现虚拟地址映射)
+  - [1.2. IA-32e分页模式实现](#12-ia-32e分页模式实现)
+    - [1.2.1. 初始化页表结构](#121-初始化页表结构)
+    - [1.2.2. 实现虚拟地址映射](#122-实现虚拟地址映射)
+- [2. 多处理器机制](#2-多处理器机制)
+  - [2.1. 调度任务](#21-调度任务)
+    - [2.1.1. IPI routine](#211-ipi-routine)
+  - [2.2. 处理器切换](#22-处理器切换)
+- [3. 调试记录机制](#3-调试记录机制)
+
+<!-- /code_chunk_output -->
+
 # 1. 分页机制
 
 可以参考: `Architecture/x86/IA32和x64架构分页数据结构`
@@ -91,7 +110,13 @@ PDT与PT在PT pool(或备用PT pool, 参见表1-6)里分配, 如图1-8.
 
 1.5中所述的系统启动完毕后, 多处理器环境被开启, BSP处于工作状态, 而所有APs处于HLT状态, 等待BSP分派任务执行.
 
-## 调度任务
+## 2.1. 调度任务
 
 所有处理器都可以通过IPI(Inter-processor interrupt, 处理器间中断)消息形式调度目标处理器执行某个任务, 也可以广播IPI给一组处理器共同执行某个程序.
+
+### 2.1.1. IPI routine
+
+## 2.2. 处理器切换
+
+# 3. 调试记录机制
 
