--- Auto-Git Commit ---

--- a/Virtualization/Learning/处理器虚拟化技术/第2章 VMX架构基础/0. 本章概述.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第2章 VMX架构基础/0. 本章概述.md
@@ -8,4 +8,8 @@
 
 根据Intel的介绍, 在所有Intel的10 Gigabit Server Adapter和部分Gigabit Server Adapter上, **VT\-c**提供了两个关键的技术: Virtual Machine Device Queues(**VMDq**)和Virtual Machine Direct Connect(**VMDc**). Intel server adapter上的**VMDq**可以做到为**各个guest OS**处理**分类好的packet**, 能**明显提升I/O吞吐量**. 而**VMDc**使用PCI\-SIG Single Root I/O(**SR\-IOV**)技术, 允许虚拟机**直接使用访问网络I/O硬件**改善虚拟化性能.
 
-在处理器虚拟化方面, Intel也为Itanium平台提供了虚拟化, 即Intel VT-i. 本书中所讨论的虚拟化技术主要是基于**处理器虚拟化(Intel VT\-x**)中的Virtual\-Machine Extensions(**VMX**)架构. 关于VT\-d技术可下载\<Intel Virtualization Technology for Directed I/O Architecture Specification\> 文档, 它并不在本书讨论范围. VT\-d技术在桌面平台并不是每款处理器都提供, VT\-c技术提供在服务器平台.
+在处理器虚拟化方面, Intel也为Itanium平台提供了虚拟化, 即Intel VT-i. 
+
+本书中所讨论的虚拟化技术主要是基于**处理器虚拟化(Intel VT\-x**)中的Virtual\-Machine Extensions(**VMX**)架构. 
+
+关于VT\-d技术可下载\<Intel Virtualization Technology for Directed I/O Architecture Specification\> 文档, 它并不在本书讨论范围. VT\-d技术在桌面平台并不是每款处理器都提供, VT\-c技术提供在服务器平台.
