--- a/Virtualization/KVM/源码分析/2. 模块初始化以及创建虚拟机/1. KVM模块初始化.md
+++ b/Virtualization/KVM/源码分析/2. 模块初始化以及创建虚拟机/1. KVM模块初始化.md
@@ -5,7 +5,7 @@
 
 - [1. 整体介绍](#1-整体介绍)
 - [2. kvm_init: 初始化kvm框架](#2-kvm_init-初始化kvm框架)
-  - [2.1. 架构初始化](#21-架构初始化)
+  - [2.1. 架构初始化: kvm_arch_init](#21-架构初始化-kvm_arch_init)
     - [2.1.1. 支持的检查](#211-支持的检查)
   - [2.2. 硬件配置](#22-硬件配置)
     - [2.2.1. vmx/svm的硬件配置hardware_setup()](#221-vmxsvm的硬件配置hardware_setup)
@@ -87,7 +87,7 @@ r = kvm_init(&vmx_x86_ops, sizeof(struct vcpu_vmx), __alignof__(struct vcpu_vmx)
 
 正式进行KVM框架初始化
 
-## 2.1. 架构初始化
+## 2.1. 架构初始化: kvm_arch_init
 
 使用传入的`vmx_x86_ops`参数, 注意这是`void *`类型的
 
