--- Auto-Git Commit ---

--- a/Virtualization/KVM/源码分析/2. 模块初始化以及创建虚拟机/1. KVM模块初始化.md
+++ b/Virtualization/KVM/源码分析/2. 模块初始化以及创建虚拟机/1. KVM模块初始化.md
@@ -6,7 +6,7 @@
 - [1. 整体介绍](#1-整体介绍)
 - [2. kvm_init: 初始化kvm框架](#2-kvm_init-初始化kvm框架)
   - [2.1. 架构初始化: kvm_arch_init](#21-架构初始化-kvm_arch_init)
-    - [2.1.1. 支持的检查](#211-支持的检查)
+    - [2.1.1. 检查](#211-检查)
   - [2.2. 硬件配置](#22-硬件配置)
     - [2.2.1. vmx/svm的硬件配置hardware_setup()](#221-vmxsvm的硬件配置hardware_setup)
       - [2.2.1.1. 设置全局vmcs_config和vmx_capability](#2211-设置全局vmcs_config和vmx_capability)
@@ -95,9 +95,16 @@ r = kvm_init(&vmx_x86_ops, sizeof(struct vcpu_vmx), __alignof__(struct vcpu_vmx)
 r = kvm_arch_init(opaque);
 ```
 
-### 2.1.1. 支持的检查
+### 2.1.1. 检查
 
-先功能性检查, 
+```cpp
+// CPUID.1:ECX.VMX[bit 5] -> VT
+ops->cpu_has_kvm_support();
+//
+ops->disable_by_bios();
+//
+!boot_cpu_has(x86_FEATURE_FPU) || !boot_cpu_has(X86_FEATURE_FXSR);
+```
 
 ## 2.2. 硬件配置
 
