--- Auto-Git Commit ---

--- a/Virtualization/KVM/源码分析/2. 模块初始化以及创建虚拟机/1. KVM模块初始化.md
+++ b/Virtualization/KVM/源码分析/2. 模块初始化以及创建虚拟机/1. KVM模块初始化.md
@@ -39,7 +39,7 @@ vmx_init()                               // 初始化入口
  |   |   ├─cpu_has_kvm_support()         // CPU是否支持kvm 
  |   |   ├─disabled_by_bios()            // bios是否禁用vt
  |   |   ├─boot_cpu_has()                // CPU是否支持一些特性
- |   |   ├─kmem_cache_create("x86_fpu")  // 
+ |   |   ├─kmem_cache_create("x86_fpu")  // x86_fpu
  |   |   ├─alloc_percpu()                // 
  |   |   ├─kvm_mmu_module_init()         // 
  |   |   ├─kvm_mmu_set_mask_ptes()       // 
@@ -95,14 +95,16 @@ r = kvm_init(&vmx_x86_ops, sizeof(struct vcpu_vmx), __alignof__(struct vcpu_vmx)
 r = kvm_arch_init(opaque);
 ```
 
+主要是架构相关的检查和初始化
+
 ### 2.1.1. 检查
 
 ```cpp
-// CPUID.1:ECX.VMX[bit 5] -> VT
+// CPUID.1:ECX.VMX[bit 5] -> VT 必须支持
 ops->cpu_has_kvm_support();
-//
+// bios必须支持
 ops->disable_by_bios();
-//
+// FPU和FXSR必须支持
 !boot_cpu_has(x86_FEATURE_FPU) || !boot_cpu_has(X86_FEATURE_FXSR);
 ```
 
