--- Auto-Git Commit ---

--- a/Virtualization/KVM/源码分析/2. 模块初始化以及创建虚拟机/1. KVM模块初始化.md
+++ b/Virtualization/KVM/源码分析/2. 模块初始化以及创建虚拟机/1. KVM模块初始化.md
@@ -7,6 +7,8 @@
 - [2. kvm_init: 初始化kvm框架](#2-kvm_init-初始化kvm框架)
   - [2.1. 架构初始化: kvm_arch_init](#21-架构初始化-kvm_arch_init)
     - [2.1.1. 检查](#211-检查)
+    - [fpu_cache分配](#fpu_cache分配)
+    - [](#)
   - [2.2. 硬件配置](#22-硬件配置)
     - [2.2.1. vmx/svm的硬件配置hardware_setup()](#221-vmxsvm的硬件配置hardware_setup)
       - [2.2.1.1. 设置全局vmcs_config和vmx_capability](#2211-设置全局vmcs_config和vmx_capability)
@@ -39,8 +41,8 @@ vmx_init()                               // 初始化入口
  |   |   ├─cpu_has_kvm_support()         // CPU是否支持kvm 
  |   |   ├─disabled_by_bios()            // bios是否禁用vt
  |   |   ├─boot_cpu_has()                // CPU是否支持一些特性
- |   |   ├─kmem_cache_create("x86_fpu")  // x86_fpu
- |   |   ├─alloc_percpu()                // 
+ |   |   ├─kmem_cache_create("x86_fpu")  // x86_fpu kmem_cache
+ |   |   ├─alloc_percpu()                // kvm_shared_msrs
  |   |   ├─kvm_mmu_module_init()         // 
  |   |   ├─kvm_mmu_set_mask_ptes()       // 
  |   |   ├─kvm_timer_init()              // 
@@ -108,6 +110,17 @@ ops->disable_by_bios();
 !boot_cpu_has(x86_FEATURE_FPU) || !boot_cpu_has(X86_FEATURE_FXSR);
 ```
 
+### fpu_cache分配
+
+```cpp
+// arch/x86/kvm/x86.c
+struct kmem_cache *x86_fpu_cache;
+EXPORT_SYMBOL_GPL(x86_fpu_cache);
+
+x86_fpu_cache = kmem_cache_create("x86_fpu)
+```
+
+### 
 ## 2.2. 硬件配置
 
 ### 2.2.1. vmx/svm的硬件配置hardware_setup()
