--- Auto-Git Commit ---

--- a/Virtualization/KVM/源码分析/2. 模块初始化以及创建虚拟机/1. KVM模块初始化.md
+++ b/Virtualization/KVM/源码分析/2. 模块初始化以及创建虚拟机/1. KVM模块初始化.md
@@ -8,6 +8,7 @@
   - [2.1. 架构初始化: kvm_arch_init](#21-架构初始化-kvm_arch_init)
     - [2.1.1. 检查](#211-检查)
     - [fpu_cache分配](#fpu_cache分配)
+    - [percpu kvm_shared_msrs](#percpu-kvm_shared_msrs)
     - [](#)
   - [2.2. 硬件配置](#22-硬件配置)
     - [2.2.1. vmx/svm的硬件配置hardware_setup()](#221-vmxsvm的硬件配置hardware_setup)
@@ -120,7 +121,19 @@ EXPORT_SYMBOL_GPL(x86_fpu_cache);
 x86_fpu_cache = kmem_cache_create("x86_fpu)
 ```
 
+### percpu kvm_shared_msrs
+
+```cpp
+static struct kvm_shared_msrs __percpu *shared_msrs;
+
+```
+
 ### 
+
+```cpp
+kvm_mmu_module_init();
+```
+
 ## 2.2. 硬件配置
 
 ### 2.2.1. vmx/svm的硬件配置hardware_setup()
