--- Auto-Git Commit ---

--- a/Virtualization/KVM/源码分析/2. 模块初始化以及创建虚拟机/1. KVM模块初始化.md
+++ b/Virtualization/KVM/源码分析/2. 模块初始化以及创建虚拟机/1. KVM模块初始化.md
@@ -118,21 +118,32 @@ ops->disable_by_bios();
 struct kmem_cache *x86_fpu_cache;
 EXPORT_SYMBOL_GPL(x86_fpu_cache);
 
-x86_fpu_cache = kmem_cache_create("x86_fpu)
+x86_fpu_cache = kmem_cache_create("x86_fpu", ...)
 ```
 
 ### percpu kvm_shared_msrs
 
 ```cpp
 static struct kvm_shared_msrs __percpu *shared_msrs;
-
+shared_msrs = alloc_percpu(struct kvm_shared_msrs);
 ```
 
 ### 
 
 ```cpp
 kvm_mmu_module_init();
+
+// arch/x86/kvm/mmu.c
+static struct kmem_cache *pte_list_desc_cache;
+static struct kmem_cache *mmu_page_header_cache;
+int kvm_mmu_module_init(void)
+{
+	pte_list_desc_cache = kmem_cache_create("pte_list_desc", ...)
+	mmu_page_header_cache = kmem_cache_create("kvm_mm", ...)
+}
 ```
+
+会初始化上面两个cache; 
 
 ## 2.2. 硬件配置
 
