--- a/Virtualization/KVM/源码分析/2. 模块初始化以及创建虚拟机/1. KVM模块初始化.md
+++ b/Virtualization/KVM/源码分析/2. 模块初始化以及创建虚拟机/1. KVM模块初始化.md
@@ -136,14 +136,19 @@ kvm_mmu_module_init();
 // arch/x86/kvm/mmu.c
 static struct kmem_cache *pte_list_desc_cache;
 static struct kmem_cache *mmu_page_header_cache;
+static struct percpu_counter kvm_total_used_mmu_pages;
 int kvm_mmu_module_init(void)
 {
+	// cache 初始化
 	pte_list_desc_cache = kmem_cache_create("pte_list_desc", ...)
-	mmu_page_header_cache = kmem_cache_create("kvm_mm", ...)
+	// cache 初始化
+	mmu_page_header_cache = kmem_cache_create("kvm_mmu_page_header", ...)
+	// percpu的mmu pages使用计数
+	percpu_counter_init(&kvm_total_used_mmu_pages, 0, GFP_KERNEL);
+	// 预分配
+	register_shrinker(&mmu_shrinker);
 }
 ```
-
-会初始化上面两个cache; 
 
 ## 2.2. 硬件配置
 
