--- Auto-Git Commit ---

--- a/Virtualization/KVM/源码分析/2. 模块初始化以及创建虚拟机/1. KVM模块初始化.md
+++ b/Virtualization/KVM/源码分析/2. 模块初始化以及创建虚拟机/1. KVM模块初始化.md
@@ -10,6 +10,8 @@
     - [fpu_cache分配](#fpu_cache分配)
     - [percpu kvm_shared_msrs](#percpu-kvm_shared_msrs)
     - [mmu模块相关处理](#mmu模块相关处理)
+    - [设置全局的kvm_x86_ops](#设置全局的kvm_x86_ops)
+    - [](#)
   - [2.2. 硬件配置](#22-硬件配置)
     - [2.2.1. vmx/svm的硬件配置hardware_setup()](#221-vmxsvm的硬件配置hardware_setup)
       - [2.2.1.1. 设置全局vmcs_config和vmx_capability](#2211-设置全局vmcs_config和vmx_capability)
@@ -44,9 +46,9 @@ vmx_init()                               // 初始化入口
  |   |   ├─boot_cpu_has()                // CPU是否支持一些特性
  |   |   ├─kmem_cache_create("x86_fpu")  // x86_fpu kmem_cache
  |   |   ├─alloc_percpu()                // kvm_shared_msrs
- |   |   ├─kvm_mmu_module_init()         // 
- |   |   ├─kvm_mmu_set_mask_ptes()       // 
- |   |   ├─kvm_timer_init()              // 
+ |   |   ├─kvm_mmu_module_init()         // mmu模块初始化
+ |   |   ├─kvm_mmu_set_mask_ptes()       // shadow pte mask设置
+ |   |   ├─kvm_timer_init()              // 时钟初始化
  |   |   ├─kvm_lapic_init()              // 
  |   ├─ kvm_irqfd_init()                 // 
  |   ├─ kvm_arch_hardware_setup()        // 
@@ -149,6 +151,15 @@ int kvm_mmu_module_init(void)
 	// 预分配
 	register_shrinker(&mmu_shrinker);
 }
+```
+
+### 设置全局的kvm_x86_ops
+
+### 
+
+```cpp
+// 设置MMU的shadow PTE masks
+kvm_mmu_set_mask_ptes();
 ```
 
 ## 2.2. 硬件配置
