--- Auto-Git Commit ---

--- a/Virtualization/KVM/源码分析/2. 模块初始化以及创建虚拟机/1. KVM模块初始化.md
+++ b/Virtualization/KVM/源码分析/2. 模块初始化以及创建虚拟机/1. KVM模块初始化.md
@@ -11,7 +11,7 @@
     - [percpu kvm_shared_msrs](#percpu-kvm_shared_msrs)
     - [mmu模块相关处理](#mmu模块相关处理)
     - [设置全局的kvm_x86_ops](#设置全局的kvm_x86_ops)
-    - [](#)
+    - [设置MMU的shadow PTE masks](#设置mmu的shadow-pte-masks)
   - [2.2. 硬件配置](#22-硬件配置)
     - [2.2.1. vmx/svm的硬件配置hardware_setup()](#221-vmxsvm的硬件配置hardware_setup)
       - [2.2.1.1. 设置全局vmcs_config和vmx_capability](#2211-设置全局vmcs_config和vmx_capability)
@@ -155,12 +155,20 @@ int kvm_mmu_module_init(void)
 
 ### 设置全局的kvm_x86_ops
 
-### 
+```cpp
+struct kvm_x86_ops *kvm_x86_ops __read_mostly;
+EXPORT_SYMBOL_GPL(kvm_x86_ops);
+
+kvm_x86_ops = ops;
+```
+
+### 设置MMU的shadow PTE masks
 
 ```cpp
 // 设置MMU的shadow PTE masks
 kvm_mmu_set_mask_ptes();
 ```
+
 
 ## 2.2. 硬件配置
 
