--- a/Virtualization/KVM/源码分析/2. 模块初始化以及创建虚拟机/1. KVM模块初始化.md
+++ b/Virtualization/KVM/源码分析/2. 模块初始化以及创建虚拟机/1. KVM模块初始化.md
@@ -12,6 +12,7 @@
     - [mmu模块相关处理](#mmu模块相关处理)
     - [设置全局的kvm_x86_ops](#设置全局的kvm_x86_ops)
     - [设置MMU的shadow PTE masks](#设置mmu的shadow-pte-masks)
+    - [timer初始化](#timer初始化)
   - [2.2. 硬件配置](#22-硬件配置)
     - [2.2.1. vmx/svm的硬件配置hardware_setup()](#221-vmxsvm的硬件配置hardware_setup)
       - [2.2.1.1. 设置全局vmcs_config和vmx_capability](#2211-设置全局vmcs_config和vmx_capability)
@@ -49,7 +50,7 @@ vmx_init()                               // 初始化入口
  |   |   ├─kvm_mmu_module_init()         // mmu模块初始化
  |   |   ├─kvm_mmu_set_mask_ptes()       // shadow pte mask设置
  |   |   ├─kvm_timer_init()              // 时钟初始化
- |   |   ├─kvm_lapic_init()              // 
+ |   |   ├─kvm_lapic_init()              // lapic初始化
  |   ├─ kvm_irqfd_init()                 // 
  |   ├─ kvm_arch_hardware_setup()        // 
  |   |   ├─kvm_x86_ops->hardware_setup() // CPU是否支持kvm 
@@ -168,6 +169,14 @@ kvm_x86_ops = ops;
 // 设置MMU的shadow PTE masks
 kvm_mmu_set_mask_ptes();
 ```
+
+### timer初始化
+
+```cpp
+kvm_timer_init();
+```
+
+
 
 
 ## 2.2. 硬件配置
