--- Auto-Git Commit ---

--- a/Virtualization/KVM/源码分析/2. 模块初始化以及创建虚拟机/1. KVM模块初始化.md
+++ b/Virtualization/KVM/源码分析/2. 模块初始化以及创建虚拟机/1. KVM模块初始化.md
@@ -13,6 +13,8 @@
     - [设置全局的kvm_x86_ops](#设置全局的kvm_x86_ops)
     - [设置MMU的shadow PTE masks](#设置mmu的shadow-pte-masks)
     - [timer初始化](#timer初始化)
+    - [lapic初始化](#lapic初始化)
+  - [workqueue?](#workqueue)
   - [2.2. 硬件配置](#22-硬件配置)
     - [2.2.1. vmx/svm的硬件配置hardware_setup()](#221-vmxsvm的硬件配置hardware_setup)
       - [2.2.1.1. 设置全局vmcs_config和vmx_capability](#2211-设置全局vmcs_config和vmx_capability)
@@ -176,8 +178,17 @@ kvm_mmu_set_mask_ptes();
 kvm_timer_init();
 ```
 
+### lapic初始化
 
+```cpp
+kvm_lapic_init();
+```
 
+## workqueue?
+
+```
+
+```
 
 ## 2.2. 硬件配置
 
