--- a/Virtualization/KVM/源码分析/2. 模块初始化以及创建虚拟机/1. KVM模块初始化.md
+++ b/Virtualization/KVM/源码分析/2. 模块初始化以及创建虚拟机/1. KVM模块初始化.md
@@ -7,25 +7,25 @@
 - [2. kvm_init: 初始化kvm框架](#2-kvm_init-初始化kvm框架)
   - [2.1. 架构初始化: kvm_arch_init](#21-架构初始化-kvm_arch_init)
     - [2.1.1. 检查](#211-检查)
-    - [fpu_cache分配](#fpu_cache分配)
-    - [percpu kvm_shared_msrs](#percpu-kvm_shared_msrs)
-    - [mmu模块相关处理](#mmu模块相关处理)
-    - [设置全局的kvm_x86_ops](#设置全局的kvm_x86_ops)
-    - [设置MMU的shadow PTE masks](#设置mmu的shadow-pte-masks)
-    - [timer初始化](#timer初始化)
-    - [lapic初始化](#lapic初始化)
-  - [workqueue?](#workqueue)
-  - [2.2. 架构相关的硬件设置](#22-架构相关的硬件设置)
-  - [2.2.1. vmx/svm的硬件配置hardware_setup()](#221-vmxsvm的硬件配置hardware_setup)
-      - [2.2.1.1. 设置全局vmcs_config和vmx_capability](#2211-设置全局vmcs_config和vmx_capability)
-  - [2.3. 检查处理器对vmx的兼容性](#23-检查处理器对vmx的兼容性)
-  - [2.4. 注册CPU状态变化的通知函数](#24-注册cpu状态变化的通知函数)
-  - [2.5. 注册reboot时候的通知函数](#25-注册reboot时候的通知函数)
-  - [2.6. 分配内存](#26-分配内存)
-  - [2.7. 赋值file_operations的模块名](#27-赋值file_operations的模块名)
-  - [2.8. 注册设备文件/dev/kvm](#28-注册设备文件devkvm)
-  - [2.9. 动作注册](#29-动作注册)
-  - [2.10. debugfs初始化](#210-debugfs初始化)
+    - [2.1.2. fpu_cache分配](#212-fpu_cache分配)
+    - [2.1.3. percpu kvm_shared_msrs](#213-percpu-kvm_shared_msrs)
+    - [2.1.4. mmu模块相关处理](#214-mmu模块相关处理)
+    - [2.1.5. 设置全局的kvm_x86_ops](#215-设置全局的kvm_x86_ops)
+    - [2.1.6. 设置MMU的shadow PTE masks](#216-设置mmu的shadow-pte-masks)
+    - [2.1.7. timer初始化](#217-timer初始化)
+    - [2.1.8. lapic初始化](#218-lapic初始化)
+  - [2.2. workqueue?](#22-workqueue)
+  - [2.3. 架构相关的硬件设置](#23-架构相关的硬件设置)
+  - [2.4. vmx/svm的硬件配置hardware_setup()](#24-vmxsvm的硬件配置hardware_setup)
+      - [2.4.1. 设置全局vmcs_config和vmx_capability](#241-设置全局vmcs_config和vmx_capability)
+  - [2.5. 检查处理器对vmx的兼容性](#25-检查处理器对vmx的兼容性)
+  - [2.6. 注册CPU状态变化的通知函数](#26-注册cpu状态变化的通知函数)
+  - [2.7. 注册reboot时候的通知函数](#27-注册reboot时候的通知函数)
+  - [2.8. 分配内存](#28-分配内存)
+  - [2.9. 赋值file_operations的模块名](#29-赋值file_operations的模块名)
+  - [2.10. 注册设备文件/dev/kvm](#210-注册设备文件devkvm)
+  - [2.11. 动作注册](#211-动作注册)
+  - [2.12. debugfs初始化](#212-debugfs初始化)
 - [3. 参考](#3-参考)
 
 <!-- /code_chunk_output -->
@@ -116,7 +116,7 @@ ops->disable_by_bios();
 !boot_cpu_has(x86_FEATURE_FPU) || !boot_cpu_has(X86_FEATURE_FXSR);
 ```
 
-### fpu_cache分配
+### 2.1.2. fpu_cache分配
 
 ```cpp
 // arch/x86/kvm/x86.c
@@ -126,14 +126,14 @@ EXPORT_SYMBOL_GPL(x86_fpu_cache);
 x86_fpu_cache = kmem_cache_create("x86_fpu", ...)
 ```
 
-### percpu kvm_shared_msrs
+### 2.1.3. percpu kvm_shared_msrs
 
 ```cpp
 static struct kvm_shared_msrs __percpu *shared_msrs;
 shared_msrs = alloc_percpu(struct kvm_shared_msrs);
 ```
 
-### mmu模块相关处理
+### 2.1.4. mmu模块相关处理
 
 ```cpp
 // arch/x86/kvm/x86.c
@@ -156,7 +156,7 @@ int kvm_mmu_module_init(void)
 }
 ```
 
-### 设置全局的kvm_x86_ops
+### 2.1.5. 设置全局的kvm_x86_ops
 
 ```cpp
 struct kvm_x86_ops *kvm_x86_ops __read_mostly;
@@ -165,38 +165,38 @@ EXPORT_SYMBOL_GPL(kvm_x86_ops);
 kvm_x86_ops = ops;
 ```
 
-### 设置MMU的shadow PTE masks
+### 2.1.6. 设置MMU的shadow PTE masks
 
 ```cpp
 // 设置MMU的shadow PTE masks
 kvm_mmu_set_mask_ptes();
 ```
 
-### timer初始化
+### 2.1.7. timer初始化
 
 ```cpp
 kvm_timer_init();
 ```
 
-### lapic初始化
+### 2.1.8. lapic初始化
 
 ```cpp
 kvm_lapic_init();
 ```
 
-## workqueue?
+## 2.2. workqueue?
 
 ```
 kvm_irqfd_init();
 ```
 
-## 2.2. 架构相关的硬件设置
+## 2.3. 架构相关的硬件设置
 
 ```cpp
 kvm_arch_hardware_setup();
 ```
 
-## 2.2.1. vmx/svm的硬件配置hardware_setup()
+## 2.4. vmx/svm的硬件配置hardware_setup()
 
 实际上调用的是 
 
@@ -204,7 +204,7 @@ kvm_arch_hardware_setup();
 kvm_x86_ops->hardware_setup();
 ```
 
-#### 2.2.1.1. 设置全局vmcs_config和vmx_capability
+#### 2.4.1. 设置全局vmcs_config和vmx_capability
 
 ```cpp
 // arch/x86/kvm/vmx/vmx.c
@@ -214,7 +214,7 @@ if (setup_vmcs_config(&vmcs_config, &vmx_capability) < 0)
 
 
 
-## 2.3. 检查处理器对vmx的兼容性
+## 2.5. 检查处理器对vmx的兼容性
 
 ```cpp
 for_each_online_cpu(cpu) {
@@ -228,7 +228,7 @@ for_each_online_cpu(cpu) {
 
 最终调用`vmx_check_processor_compat`, 检查处理器的兼容性
 
-## 2.4. 注册CPU状态变化的通知函数
+## 2.6. 注册CPU状态变化的通知函数
 
 ```cpp
 r = cpuhp_setup_state_nocalls(CPUHP_AP_KVM_STARTING, "kvm/cpu:starting",
@@ -291,7 +291,7 @@ static void hardware_disable_nolock(void *junk)
 }
 ```
 
-## 2.5. 注册reboot时候的通知函数
+## 2.7. 注册reboot时候的通知函数
 
 原理同上, 重启的时候会调用这个函数
 
@@ -299,7 +299,7 @@ static void hardware_disable_nolock(void *junk)
 register_reboot_notifier(&kvm_reboot_notifier);
 ```
 
-## 2.6. 分配内存
+## 2.8. 分配内存
 
 根据注释, 主要为了满足fx_save的对齐要求
 
@@ -315,7 +315,7 @@ kvm_vcpu_cache =
                     NULL);
 ```
 
-## 2.7. 赋值file_operations的模块名
+## 2.9. 赋值file_operations的模块名
 
 把早先传给kvm_init()的参数THIS_MODULE,也就是vmx的模块名分别赋值给三个file operation结构体变量:
 
@@ -357,7 +357,7 @@ static struct file_operations kvm_chardev_ops = {
 };
 ```
 
-## 2.8. 注册设备文件/dev/kvm
+## 2.10. 注册设备文件/dev/kvm
 
 ```cpp
 misc_register(&kvm_dev);
@@ -381,7 +381,7 @@ static struct miscdevice kvm_dev = {
 };
 ```
 
-## 2.9. 动作注册
+## 2.11. 动作注册
 
 ```cpp
 register_syscore_ops(&kvm_syscore_ops);
@@ -419,7 +419,7 @@ static __read_mostly struct preempt_ops kvm_preempt_ops;
 
 从命名看, `sched_in`和`sched_out`可以申请调度器对任务的换入换出.
 
-## 2.10. debugfs初始化
+## 2.12. debugfs初始化
 
 ```cpp
 kvm_init_debug();
