--- Auto-Git Commit ---

--- a/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/第3篇 KVM虚拟化技术/第5章 qemu-kvm虚拟化解决方案/4. KVM内核模块重要的数据结构.md
+++ b/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/第3篇 KVM虚拟化技术/第5章 qemu-kvm虚拟化解决方案/4. KVM内核模块重要的数据结构.md
@@ -103,7 +103,7 @@ struct kvm {
 
 * `struct kvm_memslots *memslots`;
 
-KVM虚拟机所分配到的**内存slot**，
+KVM虚拟机所分配到的**内存slot**，内存条模型
 
 以**数组形式**存储这些**slot的地址信息**。用于**GPA转成HVA**, 内存虚拟化.
 
