--- a/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/第3篇 KVM虚拟化技术/第5章 qemu-kvm虚拟化解决方案/5. KVM内核模块重要流程的分析.md
+++ b/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/第3篇 KVM虚拟化技术/第5章 qemu-kvm虚拟化解决方案/5. KVM内核模块重要流程的分析.md
@@ -190,7 +190,7 @@ KVM 的**该部分代码**实现在**kvm\_dev** 的 **file\_operation 结构体*
 
 代码5\-7 KVM\_CREATE\_VM实现代码
 
-```
+```cpp
 // virt/kvm/kvm_main.c
 static long kvm_dev_ioctl(struct file *filp,
 			  unsigned int ioctl, unsigned long arg)
