--- Auto-Git Commit ---

--- a/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/第3篇 KVM虚拟化技术/第5章 qemu-kvm虚拟化解决方案/5. KVM内核模块重要流程的分析.md
+++ b/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/第3篇 KVM虚拟化技术/第5章 qemu-kvm虚拟化解决方案/5. KVM内核模块重要流程的分析.md
@@ -205,7 +205,7 @@ static long kvm_dev_ioctl(struct file *filp,
 
 **kvm\_dev\_ioctl\_create\_vm**函数(virt/kvm/kvm\_main.c)通过调用**kvm\_create\_vm**函数对**KVM结构体**进行创建。
 
-```c
+```cpp
 // virt/kvm/kvm_main.c
 static int kvm_dev_ioctl_create_vm(unsigned long type)
 {
@@ -294,7 +294,7 @@ static struct kvm *kvm_create_vm(unsigned long type)
 
 代码5\-8 kvm\_arch\_hardware\_enable函数代码
 
-```
+```cpp
 ￼(5799)   int kvm_arch_hardware_enable(void *garbage)￼
 (5800)   {￼
 (5801)        struct kvm *kvm;￼
