--- a/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/第3篇 KVM虚拟化技术/第5章 qemu-kvm虚拟化解决方案/5. KVM内核模块重要流程的分析.md
+++ b/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/第3篇 KVM虚拟化技术/第5章 qemu-kvm虚拟化解决方案/5. KVM内核模块重要流程的分析.md
@@ -322,7 +322,7 @@ static struct kvm *kvm_create_vm(unsigned long type)
 
 代码5\-9 调用anon\_inode\_getfd创建kvm\-vm
 
-```
+```cpp
 // 
 ￼(1840)        fd = anon_inode_getfd("kvm-vm", &kvm_vm_fops, kvm, O_RDWR);￼
 (1841)        if (fd < 0)￼
