--- Auto-Git Commit ---

--- a/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/参与开源社区.md
+++ b/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/参与开源社区.md
@@ -30,7 +30,11 @@
       - [3.1.1.2. 其他方式](#3112-其他方式)
   - [3.2. 代码风格](#32-代码风格)
     - [3.2.1. KVM内核部分的代码风格](#321-kvm内核部分的代码风格)
+      - [缩进](#缩进)
     - [3.2.2. QEMU的代码风格](#322-qemu的代码风格)
+      - [缩进](#缩进-1)
+      - [每行的长度](#每行的长度)
+      - [命名规范](#命名规范)
   - [3.3. 生成patch](#33-生成patch)
     - [3.3.1. 使用diff工具生成patch](#331-使用diff工具生成patch)
     - [3.3.2. 使用Git工具生成patch](#332-使用git工具生成patch)
@@ -463,9 +467,42 @@ QEMU的IRC讨论方式为：在irc.oftc.net服务器上的“#qemu”频道。
 
 ## 3.2. 代码风格
 
+尽管代码风格并没有一个放之四海而皆准的规范，但随着时间的推移和项目的实践，也产生了一些较好的代码风格规范，如网上比较有名的有**Linux内核代码风格**、**Google代码风格**等。
+
+注: Google对开源项目代码风格的指导文档见 https://github.com/google/styleguide
+
+KVM和QEMU都分别有各自的代码风格，下面对其进行简单介绍。
+
 ### 3.2.1. KVM内核部分的代码风格
 
+KVM的代码风格完全遵循Linux内核规定的代码风格。
+
+Linux内核的代码风格在Linux内核代码仓库中的 Documentation/process/coding-style.rst 文件中有详细的说明，另外也可以查看其网页版本。
+
+注: Linux内核代码风格的中英文版本分别为 https://www.kernel.org/doc/html/latest/translations/zh_CN/codinstyle.html，https://www.kernel.org/doc/html/latest/process/coding-style.html
+
+这里简单列举其中的几项代码风格。
+
+#### 缩进
+
+使用制表符来表示缩进而不是使用空格，一个制表符长度是8个字符，不要试图使用4个（甚至2个）字符长度来表示缩进。
+
+不过，在注释、文档和Kconfig中可以使用空格来表示缩进。8个字符长度的制表符的缩进可以让代码更容易阅读.
+
 ### 3.2.2. QEMU的代码风格
+
+QEMU的代码风格在QEMU代码仓库中名为`CODING_STYLE`的文件中有详细的讲述。
+
+QEMU代码风格与Linux内核（包括KVM）的不完全相同，主要包含以下几点规范。
+
+#### 缩进
+
+
+#### 每行的长度
+
+#### 命名规范
+
+
 
 ## 3.3. 生成patch
 
