--- Auto-Git Commit ---

--- a/Virtualization/KVM/源码分析/2. 模块初始化以及创建虚拟机/1. KVM模块初始化.md
+++ b/Virtualization/KVM/源码分析/2. 模块初始化以及创建虚拟机/1. KVM模块初始化.md
@@ -64,9 +64,9 @@ vmx_init()                               // 初始化入口
  |   |   |  ├─cpu_has_vmx_invvpid()      // cpu是否支持invvpid
  |   |   |  ├─cpu_has_vmx_ept()          // cpu是否支持ept
  |   |   |  ├─cpu_has_vmx_XXX()          // cpu是否有XXX
- |   |   |  ├─vmx_enable_tdp()           // 开启tdp
+ |   |   |  ├─vmx_enable_tdp()           // ept支持时开启tdp
  |   |   |  ├─kvm_disable_tdp()          // 关闭tdp
- |   |   |  └─alloc_kvm_area()           // 
+ |   |   |  └─alloc_kvm_area()           // 给每个cpu分配一个struct vmcs
  |   |   └─kvm_init_msr_list()           // 
  |   ├─ smp_call_function_single()       // 对每个online cpu进行兼容性检查
  |   ├─ cpuhp_setup_state_nocalls()      // 注册cpu状态变化的回调函数
