--- Auto-Git Commit ---

--- a/Virtualization/KVM/源码分析/2. 模块初始化以及创建虚拟机/1. KVM模块初始化.md
+++ b/Virtualization/KVM/源码分析/2. 模块初始化以及创建虚拟机/1. KVM模块初始化.md
@@ -207,12 +207,14 @@ kvm_x86_ops->hardware_setup();
 #### 2.4.1. 设置全局vmcs_config和vmx_capability
 
 ```cpp
+// arch/x86/kvm/vmx/capabilities.h
+
 // arch/x86/kvm/vmx/vmx.c
 if (setup_vmcs_config(&vmcs_config, &vmx_capability) < 0)
     return -EIO;
 ```
 
-
+这里的
 
 ## 2.5. 检查处理器对vmx的兼容性
 
