--- a/Virtualization/KVM/源码分析/2. 模块初始化以及创建虚拟机/1. KVM模块初始化.md
+++ b/Virtualization/KVM/源码分析/2. 模块初始化以及创建虚拟机/1. KVM模块初始化.md
@@ -208,7 +208,8 @@ kvm_x86_ops->hardware_setup();
 
 ```cpp
 // arch/x86/kvm/vmx/capabilities.h
-
+extern struct vmcs_config vmcs_config;
+extern struct vmx_capability vmx_capability;
 // arch/x86/kvm/vmx/vmx.c
 if (setup_vmcs_config(&vmcs_config, &vmx_capability) < 0)
     return -EIO;
