--- a/Virtualization/KVM/源码分析/2. 模块初始化以及创建虚拟机/1. KVM模块初始化.md
+++ b/Virtualization/KVM/源码分析/2. 模块初始化以及创建虚拟机/1. KVM模块初始化.md
@@ -210,12 +210,13 @@ kvm_x86_ops->hardware_setup();
 // arch/x86/kvm/vmx/capabilities.h
 extern struct vmcs_config vmcs_config;
 extern struct vmx_capability vmx_capability;
+
 // arch/x86/kvm/vmx/vmx.c
 if (setup_vmcs_config(&vmcs_config, &vmx_capability) < 0)
     return -EIO;
 ```
 
-这里的
+这里的这两个全局变量不是指针, 而是真正值, 所以就直接分配了内存
 
 ## 2.5. 检查处理器对vmx的兼容性
 
