--- a/Virtualization/KVM/源码分析/2. 模块初始化以及创建虚拟机/1. KVM模块初始化.md
+++ b/Virtualization/KVM/源码分析/2. 模块初始化以及创建虚拟机/1. KVM模块初始化.md
@@ -18,6 +18,7 @@
   - [2.3. 架构相关的硬件设置](#23-架构相关的硬件设置)
   - [2.4. vmx/svm的硬件配置hardware_setup()](#24-vmxsvm的硬件配置hardware_setup)
       - [2.4.1. 设置全局vmcs_config和vmx_capability](#241-设置全局vmcs_config和vmx_capability)
+      - [一堆检查](#一堆检查)
   - [2.5. 检查处理器对vmx的兼容性](#25-检查处理器对vmx的兼容性)
   - [2.6. 注册CPU状态变化的通知函数](#26-注册cpu状态变化的通知函数)
   - [2.7. 注册reboot时候的通知函数](#27-注册reboot时候的通知函数)
@@ -217,6 +218,10 @@ if (setup_vmcs_config(&vmcs_config, &vmx_capability) < 0)
 ```
 
 这里的这两个全局变量不是指针, 而是真正值, 所以就直接分配了内存
+
+#### 一堆检查
+
+
 
 ## 2.5. 检查处理器对vmx的兼容性
 
