--- Auto-Git Commit ---

--- a/Virtualization/KVM/源码分析/2. 模块初始化以及创建虚拟机/1. KVM模块初始化.md
+++ b/Virtualization/KVM/源码分析/2. 模块初始化以及创建虚拟机/1. KVM模块初始化.md
@@ -225,6 +225,10 @@ if (setup_vmcs_config(&vmcs_config, &vmx_capability) < 0)
 
 #### 
 
+```cpp
+alloc_kvm_area();
+```
+
 ## 2.5. 检查处理器对vmx的兼容性
 
 ```cpp
